--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ function calculateETA() {
       var breaksResult = document.getElementById("breaks-result");
       breaksResult.innerHTML = "Number of 30-Minute Breaks: " + required30MinBreaks;
       var distanceResult = document.getElementById("distance-result");
-      distanceResult.innerHTML = "Estimated Distance: " + estimatedDistance;
+      //distanceResult.innerHTML = "Estimated Distance: " + estimatedDistance;
 
       // Display an explanation of the calculation to the user
            var explanationResult = document.getElementById("explanation-result");
