--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ li {
 <input type="text" id="remaining-hos" name="remaining-hos" pattern="^([0-9]|0[0-9]|10):[0-5][0-9]$" oninput="validateRemainingHOS(true)" title="Please enter time in the format HH:mm (maximum 10:59)">
 
 <div id="remaining-hos-error" style="color: red;"></div>
+      <label for="datetime-local">Delivery Appointment Time</label>
       <input type="datetime-local" id="delivery-time" name="delivery-time"><br><br>
       <input type="button" value="Calculate ETA" onclick="calculateETA()" id="calculate-eta-button">
     </form>
